| Bug #58655 | Assertion failed, server crashes with mysqld got signal 6 | ||
|---|---|---|---|
| Submitted: | 2 Dec 2010 12:38 | Modified: | 13 Jun 2011 12:54 |
| Reporter: | Nidhi Shrotriya | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.1.55-debug | OS: | Any |
| Assigned to: | CPU Architecture: | Any | |
[2 Dec 2010 12:38]
Nidhi Shrotriya
[13 Jan 2011 7:38]
Nidhi Shrotriya
Exact Steps to reproduce: ======================= Pick 5.1.55 build from http://trollheim.norway.sun.com/archive/2776783.mysql-5.1.55-linux-x86_64.tar.gz Start server, execute below commands from mysql commandline. USE test; CREATE TABLE part_tbl_i2 ( id MEDIUMINT NOT NULL AUTO_INCREMENT, dt DATE, st VARCHAR(255), uid INT, id2nd LONGBLOB, filler VARCHAR(255), PRIMARY KEY(id, dt) ); INSERT INTO part_tbl_i2 (dt, st, uid, id2nd, filler) VALUES ('1991-03-14', 'Initial Insert', 200, 1234567, 'No Data'), ('1991-02-26', 'Initial Insert', 201, 1234567, 'No Data'), ('1992-03-16', 'Initial Insert', 234, 1234567, 'No Data'), ('1992-07-02', 'Initial Insert', 287, 1234567, 'No Data'), ('1991-05-26', 'Initial Insert', 256, 1234567, 'No Data'), ('1991-04-25', 'Initial Insert', 222, 1234567, 'No Data'), ('1993-03-12', 'Initial Insert', 267, 1234567, 'No Data'), ('1993-03-14', 'Initial Insert', 291, 1234567, 'No Data'), ('1991-12-20', 'Initial Insert', 298, 1234567, 'No Data'), ('1994-10-31', 'Initial Insert', 220, 1234567, 'No Data'); ALTER TABLE part_tbl_i2 PARTITION BY LIST (YEAR(dt)) ( PARTITION d1 VALUES IN (1991, 1994), PARTITION d2 VALUES IN (1993), PARTITION d3 VALUES IN (1992, 1995, 1996) ); INSERT INTO part_tbl_i2 (dt, st, uid, id2nd, filler) VALUES ('1991-07-14', 'After Partitioning Insert', 299, 1234567, 'Insert row'); UPDATE part_tbl_i2 SET filler='Updating the row' WHERE uid=298; Crashes on the above update statement.
[18 Jan 2011 6:06]
Nidhi Shrotriya
Seen only with debug builds. http://trollheim.norway.sun.com/archive/2805176.mysql-5.1.56-linux-x86_64.tar.gz
[13 Jun 2011 12:55]
Jon Stephens
Documented as follows in the 5.1.59, 5.1.15, and 5.6.3 changelogs:
Auto-increment columns of partitioned tables were checked even when they
were not being written to. In debug builds, this could lead to a crash of
the server.
Closed.
